/*

Copyright 2017 Continusec Pty Ltd

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

*/

syntax = "proto3";

package continusec.verifiabledatastructures.server.store;
option go_package = "pb";

import "api.proto";

message Mutation {
    // one of the following
    continusec.verifiabledatastructures.api.LogCreateRequest log_create = 1;
    continusec.verifiabledatastructures.api.MapCreateRequest map_create = 2;
    continusec.verifiabledatastructures.api.LogDeleteRequest log_delete = 3;
    continusec.verifiabledatastructures.api.MapDeleteRequest map_delete = 4;
    continusec.verifiabledatastructures.api.LogAddEntryRequest log_add_entry = 5;
    continusec.verifiabledatastructures.api.MapSetValueRequest map_set_value = 6;
}

message LeafNode {
    bytes mth = 1;
}

message TreeNode {
    bytes mth = 1;
}

message LogTreeHash {
    bytes mth = 1;
}

message EntryIndex {
    int64 index = 1;
}
